--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 h1,h3 {
   text-align:center;
 }
@@ -5,14 +8,24 @@ h1 {
   font-style:italic;
 }
 #container {
-  width: 500px
+  background-color: #00f;
+  padding: 10px;
+  width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .post {
-  text-align: justify;
+  background-color: #f00;
+  height: 350px;
+  width: 350px;
+  margin: 10px;
+  display: inline-block;
 }
-.image {
-  display: block;
-  width: 300px;
-margin-left: auto;
-margin-right: auto;
+nav {
+  width: 100%;
+  height: 100px;
+  background-color: #0f0;
+}
+body {
+  margin: 0px
 }
