--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 *{
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  max-width: 100%;
 }
 h1,h3 {
   text-align:center;
@@ -20,12 +23,27 @@ h1 {
   width: 350px;
   margin: 10px;
   display: inline-block;
+  overflow: hidden;
+  position: relative;
+}
+.post img {
+  height: 100%;
+  max-width:none;
+  position: absolute;
+  top: 0;
 }
 nav {
-  width: 100%;
   height: 100px;
   background-color: #0f0;
 }
 body {
   margin: 0px
+}
+img {
+  display: block;
+}
+.post h2 {
+  position: absolute;
+  width: 100%;
+  text-align: center;
 }
