--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1 {
   width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 100px;
 }
 .post {
   background-color: #f00;
@@ -33,8 +34,19 @@ h1 {
   top: 0;
 }
 nav {
+  position:fixed;
   height: 100px;
+  width: 100%;
   background-color: #0f0;
+  z-index: 1;
+  top: 0;
+}
+nav li {
+  display: inline;
+}
+nav a {
+    padding: 8px;
+    background-color: #dddddd;
 }
 body {
   margin: 0px
@@ -46,4 +58,11 @@ img {
   position: absolute;
   width: 100%;
   text-align: center;
+}
+ul {
+  list-style-type: none;
+}
+
+li a:hover {
+    background-color: #111;
 }
